[gd_scene load_steps=6 format=3 uid="uid://vbjphhnejpr8"]

[ext_resource type="Script" path="res://scenes/models/enemy/enemy.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://d16xed2sp00ac" path="res://scenes/models/enemy/enemy.png" id="2_xgajb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_svo1m"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tjpqw"]
radius = 256.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fh3s0"]
radius = 24.0

[node name="Enemy" type="AnimatableBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_xgajb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_svo1m")

[node name="TargetRange" type="Area2D" parent="."]
collision_layer = 0
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetRange"]
shape = SubResource("CircleShape2D_tjpqw")

[node name="FollowRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowRange"]
shape = SubResource("CircleShape2D_fh3s0")
debug_color = Color(0.969981, 0.147852, 0.235917, 0.42)

[connection signal="body_entered" from="TargetRange" to="." method="_on_target_range_body_entered"]
[connection signal="body_exited" from="TargetRange" to="." method="_on_target_range_body_exited"]
[connection signal="body_entered" from="FollowRange" to="." method="_on_follow_range_body_entered"]
[connection signal="body_exited" from="FollowRange" to="." method="_on_follow_range_body_exited"]
